--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@
 !package.json
 !package-lock.json
 
-# Optional ignores inside frontend/backend
+# Ignore node_modules and Python virtual environment
 frontend/node_modules/
+backend/node_modules/
 backend/venv/
-backend/.env/
+backend/.env
